Style: Set search results position to fixed, remove overflow, and refine CSS selector spacing.

--- a/app/[[...slug]]/page.css
+++ b/app/[[...slug]]/page.css
@@ -103,7 +103,7 @@ body {
   transform: translateY(calc(-100% - 2vh));
 }
 
-.controls > nav {
+.controls>nav {
   width: 5%;
   display: flex;
   justify-content: center;
@@ -212,13 +212,13 @@ body {
   transition: all 0.01s ease;
 }
 
-.search-container input:focus ~ .search-icon-circle {
+.search-container input:focus~.search-icon-circle {
   background: transparent;
   border-color: transparent;
 }
 
 .search-results {
-  position: absolute;
+  position: fixed;
   top: 100%;
   left: 0;
   width: 100%;
@@ -234,7 +234,6 @@ body {
   border-radius: 12px;
   z-index: 1000;
   margin-top: 10px;
-  overflow: visible;
 }
 
 .search-result-item {
@@ -788,11 +787,11 @@ body {
     width: 7rem;
   }
 
-  .btn > span {
+  .btn>span {
     display: inline;
   }
 
-  .btn span > span {
+  .btn span>span {
     display: none;
   }
 }
@@ -810,8 +809,7 @@ body {
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-}
+@media only screen and (min-width: 1200px) {}
 
 /* Reader Settings */
 .reader-settings {
